Fix JumbotronSmall rendering on small screens issue

--- a/client/styles/components/_jumbotronsmall.scss
+++ b/client/styles/components/_jumbotronsmall.scss
@@ -4,13 +4,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 12em;
 }
 
 .jumbotron-sm-text-container {
-  margin-top: 2.5em;
+  margin-top: 5em;
+  margin-bottom: 2em;
   margin-left: 3em;
   margin-right: 3em;
+  height: auto;
 }
 
 .jumbotron-sm-title {
